--- a/src/pages/Error.module.css
+++ b/src/pages/Error.module.css
@@ -8,5 +8,5 @@
   width: 60%;
   margin: 1rem;
   min-height: 0.25rem;
-  border-bottom: 1px solid #78706A;
+  border-bottom: 1px solid var(--ax-border-neutral);
 }
