--- a/src/pages/Forside/Forside.module.css
+++ b/src/pages/Forside/Forside.module.css
@@ -34,6 +34,7 @@
   cursor: pointer;
   color: var(--ax-text-neutral);
   font-weight: bold;
+  text-decoration: none;
 }
 
 .styledLink .square {
